swift-package-factory/Examples/InvalidExamples/InvalidBasisSyntax.spf
@basis 
var notABasis:[Never] { [test] }